--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fkenh14.vn%2Ftop-12-mau-giay-sneaker-dang-duoc-gioi-tre-tich-cuc-san-lung-20191207035904691.chn&psig=AOvVaw1Bex3lM6DrPmE0bmJsCHOd&ust=1701242618127000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKiL5-SU5oIDFQAAAAAdAAAAABAE">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Fashion"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
